--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express-handlebars": "3.1.0",
     "global": "^4.4.0",
     "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.17"
+
+
   }
 }
