--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-handlebars": "3.1.0",
     "express-router": "^0.0.1",
     "global": "^4.4.0",
+    "mongoose": "^6.2.10",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2",
