--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "build": "cd client && yarn install && yarn build"
   },
   "dependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-handlebars": "3.1.0",
     "express-router": "^0.0.1",
     "global": "^4.4.0",
+    "mocha": "^9.2.2",
     "mongoose": "^6.2.10",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
