--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongo-sanitize": "1.0.1",
     "mongoose": "^6.2.10",
     "nodemon": "^2.0.15",
+    "snyk": "^1.912.0",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2",
     "yarn": "^1.22.17"
